kiki/src/examples/should_fail/no_start.kiki
struct Epsilon

terminal Token {
    $Num: isize
}
